--- a/src/containers/applications/wnapp.scss
+++ b/src/containers/applications/wnapp.scss
@@ -147,6 +147,10 @@ body[data-theme="dark"] .calcApp {
   background: rgb(24, 24, 24);
 }
 
+.discordWn {
+  background: #36393f;
+}
+
 .lightWindow {
   background: #e7eaec;
 }
